@@ -42,5 +42,3 @@
 
   <div class="form-actions"><%= f.submit "Sign up", class: 'btn btn-primary' %></div>
 <% end %>
-
-<%= render "links" %>
