@@ -1,3 +1,57 @@
+<% @title = "About #{DEFAULT_APP_NAME}" %>
+
+<div class="row" style="margin-top:54px">
+  <div class="span12">
+    <h1 class="about-title"><%= @title %></h1>
+    <p class="about-tagline">Visit our <%= link_to 'online community', ABOUT_PAGE_FORUM, target: '_blank' %> or contact us <%= mail_to ABOUT_PAGE_CONTACT, 'via email', target: '_blank', subject: "#{DEFAULT_APP_NAME} Question" %>.</p>
+    <p class="about-signup"><%= link_to 'New Applicant Registration', new_applicant_registration_path, class: "btn btn-primary btn-large" %></p>
+  </div>
+</div>
+
+<hr class="soften">
+
+<p class="about-description"><%= DEFAULT_APP_NAME %> is a <%= link_to 'free to use*', 'https://github.com/remomueller/training_grant/blob/master/LICENSE', rel: 'tooltip', data: { title: 'Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License' } %> and <%= link_to 'open source', 'https://github.com/remomueller/training_grant', rel: 'tooltip', data: { title: 'Source code freely available on GitHub' } %> web application used to manages new applicants, trainees, and preceptors over a 10-year time period.</p>
+
+<div class="row">
+  <div class="span4">
+    <h2 class="about-title">New Applicants</h2>
+    <ul>
+      <li>Register for Training Grant eligibility.</li>
+      <li>Update your profile.</li>
+      <li>Receive emails to update your information once a year.</li>
+    </ul>
+  </div>
+  <div class="span4">
+    <h2 class="about-title">Preceptors</h2>
+    <ul>
+      <li>Track your trainees progress.</li>
+      <li>Update your profile information.</li>
+      <li>Receive emails to update information once a year.</li>
+    </ul>
+  </div>
+  <div class="span4">
+    <h2 class="about-title">10-year Reporting</h2>
+    <ul>
+      <li>Generate reports for applicant versus trainee acceptance rates.</li>
+      <li>Keep in touch with applicants, trainees, and preceptors.</li>
+      <li>Track current and former trainees easily over 10-year period.</li>
+    </ul>
+  </div>
+</div>
+
+<hr class="soften">
+
+<footer class="footer">
+  <p class="muted about-footer"><%= DEFAULT_APP_NAME %> Version <%= link_to TrainingGrant::VERSION::STRING, "https://github.com/remomueller/training_grant/tree/#{TrainingGrant::VERSION::MAJOR}.#{TrainingGrant::VERSION::MINOR}.#{TrainingGrant::VERSION::TINY}" %></p>
+</footer>
+
+
+
+
+
+
+
+
 <% @title = "About" %>
 
 <h1><%= @title %></h1>
