@@ -1,5 +1,7 @@
 DEFAULT_APP_NAME = "<%= print "Enter Default App Name [Training Grant]: "; s = gets.chomp().gsub('"', '\"').gsub("\\", "\\\\"); s == '' ? 'Training Grant' : s %>"
 SITE_URL = "<%= print "Enter Site URL [http://localhost]: "; s = gets.chomp().gsub('"', '\"').gsub("\\", "\\\\"); s == '' ? 'http://localhost' : s %>"
+ABOUT_PAGE_FORUM = "<%= print "Enter Forum URL: "; s = gets.chomp().gsub('"', '\"').gsub("\\", "\\\\"); s %>"
+ABOUT_PAGE_CONTACT = "<%= print "Enter Contact Email: "; s = gets.chomp().gsub('"', '\"').gsub("\\", "\\\\"); s %>"
 
 # Used so Devise knows what url to append.
 ActionMailer::Base.default_url_options[:host] = SITE_URL.gsub(/^https?:\/\//, '')
