@@ -6,12 +6,16 @@
   * Email Changes:
     * Default application name is now added to the from: field for emails
     * Email subjects no longer include the application name
+  * About page reformatted to include links to github and contact information
 
 * Refactoring
   * Consistent sorting and display of model counts used across all objects, (applicants, preceptors, users)
 
 * Testing
   * Use ActionDispatch for Integration tests instead of ActionController
+
+* Bug Fix
+  * Applicant sign up page now displays correctly
 
 == 0.4.1
 
